<resources>
    <string name="app_name">login-profile</string>

    <!-- Вход -->
    <string name="login_greeting">Вход в приложение</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>

    <!-- Профиль -->
    <string name="profile_header">Личный профиль</string>
    <string name="user_name">Армянов Армян Армянович</string>
    <string name="user_dob">Дата рождения: 11.09.2001</string>
    <string name="user_sex">Пол: </string>
    <string name="about_title">О себе</string>
    <string name="about_text">Здесь будет информация о пользователе, его интересы, увлечения и краткое описание</string>
    <string name="skills_title">Навыки</string>
    <string name="skills_text">• Java и Kotlin разработка\n• Android разработка\n• UI/UX дизайн</string>
    <string name="contacts_title">Контакты</string>
    <string name="contacts_email">Email: </string>
    <string name="contacts_phone">Телефон: </string>
    <string name="contacts_city">Город: Чебоксары</string>
    <string name="edit_button">Редактировать профиль</string>
    
    <!-- Редактирование профиля -->
    <string name="edit_header">Редактирование профиля</string>
    <string name="main_info_title">Основная информация</string>
    <string name="name_hint">ФИО</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Телефон</string>
    <string name="sex_title">Пол</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="sex_other">Другой</string>
    <string name="profile_settings_title">Настройки профиля</string>
    <string name="public_profile_switch">Публичный профиль</string>
    <string name="email_notifications_switch">Email уведомления</string>
    <string name="dark_theme_switch">Темная тема</string>
    <string name="skill_one">Java  разработка</string>
    <string name="skill_two">Kotlin  разработка</string>
    <string name="skill_three">Android разработка</string>
    <string name="skill_four">UX/UI дизайн</string>
    <string name="skill_five">Backend разработка</string>
    <string name="save_button">Сохранить</string>
    <string name="discard_button">Сбросить</string>
</resources>