<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/editProfileHeader"
        style="@style/headerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mainInfoEdit"
                style="@style/myCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mainInfoTitle"
                        style="@style/cardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/main_info_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameInputLayout"
                        style="@style/myTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_hint" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailInput"
                            style="@style/myTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_hint" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneInput"
                            style="@style/myTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_hint" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/sexTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sex_title"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/sexChoose"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/sexMale"
                            style="@style/myRadioButton"
                            android:checked="true"
                            android:text="@string/sex_male" />

                        <RadioButton
                            android:id="@+id/sexFemale"
                            style="@style/myRadioButton"
                            android:text="@string/sex_female" />

                        <RadioButton
                            android:id="@+id/sexOther"
                            style="@style/myRadioButton"
                            android:text="@string/sex_other" />
                    </RadioGroup>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileSettingsEdit"
                style="@style/myCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profileSettingsTitle"
                        style="@style/cardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_settings_title" />

                    <Switch
                        android:id="@+id/publicProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/public_profile_switch" />

                    <Switch
                        android:id="@+id/emailNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_notifications_switch" />

                    <Switch
                        android:id="@+id/darkTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/dark_theme_switch" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/skillsEdit"
                style="@style/myCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/skillsEditTitle"
                        style="@style/cardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skills_title" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/skill1"
                        style="@style/myCheckbox"
                        android:checked="true"
                        android:text="@string/skill_one" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/skill2"
                        style="@style/myCheckbox"
                        android:checked="true"
                        android:text="@string/skill_two" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/skill3"
                        style="@style/myCheckbox"
                        android:checked="true"
                        android:text="@string/skill_three" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/skill4"
                        style="@style/myCheckbox"
                        android:text="@string/skill_four" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/skill5"
                        style="@style/myCheckbox"
                        android:text="@string/skill_five" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/aboutEdit"
                style="@style/myCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aboutEditTitle"
                        style="@style/cardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_title" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/aboutInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/aboutInput"
                            style="@style/myTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textMultiLine"
                            android:singleLine="false" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    style="@style/myButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#4CAF50"
                    android:text="@string/save_button" />

                <Button
                    android:id="@+id/discardButton"
                    style="@style/myButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#A2A2A2"
                    android:text="@string/discard_button" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>