<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/profileHeader"
        style="@style/headerText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/profile_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_dob" />

            <TextView
                android:id="@+id/userSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_sex" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/aboutCard"
        style="@style/myCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutCardTitle"
                style="@style/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title" />

            <TextView
                android:id="@+id/aboutCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/skillsCard"
        style="@style/myCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/skillsCardTitle"
                style="@style/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills_title" />

            <TextView
                android:id="@+id/skillsCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skills_text" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contactsCard"
        style="@style/myCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactsCardTitle"
                style="@style/cardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_title" />

            <TextView
                android:id="@+id/contactsCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_text" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/editButton"
        style="@style/myButton"
        android:text="@string/edit_button" />
</LinearLayout>